@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/tomcat-servlet-api
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.126 2012/03/25 16:59:35 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.127 2012/03/25 20:10:52 fordfrog Exp $
+
+  25 Mar 2012; Miroslav Šulc <fordfrog@gentoo.org>
+  -tomcat-servlet-api-6.0.32.ebuild, -tomcat-servlet-api-7.0.25.ebuild:
+  Removed obsolete versions
 
   25 Mar 2012; Agostino Sarubbo <ago@gentoo.org>
   tomcat-servlet-api-7.0.26.ebuild:
